--- a/facebook/src/main/AndroidManifest.xml
+++ b/facebook/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="cz.ackee.rxfacebooklogin"
+<manifest package="cz.ackee.rxsociallogin.facebook"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
