--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,43 @@
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+out/
+.out/
+out/
+build/
+.idea/*
+!.idea/localizerSettings.xml
+!.idea/mvpAddSettings.xml
+.gradle/
+captures/
+
+
+#iml files
 *.iml
-.gradle
-/local.properties
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# linux files
+.directory
+*.*~
+
+# mac files
 .DS_Store
-/build
-/captures
-.externalNativeBuild
+
+Thumbs.db
+thumbs.db
+
+outputs/mapping.txt
+
+artwork
