--- a/google/build.gradle
+++ b/google/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
 
-    implementation 'com.facebook.android:facebook-login:4.37.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
     androidTestImplementation "junit:junit:$junitVersion"
     androidTestImplementation "org.mockito:mockito-core:$mockitoVersion"
@@ -36,8 +36,8 @@ dependencies {
 }
 
 ext {
-    bintrayName = 'facebook'
-    publishedArtifactId = 'facebook'
+    bintrayName = 'google'
+    publishedArtifactId = 'google'
 
     libraryName = 'Rx Social Login'
     libraryDescription = 'Reactive social login Android library'
@@ -54,6 +54,18 @@ publishing {
             version libProperties['VERSION_NAME']
 
             artifact(bundleReleaseAar)
+
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
+                configurations.implementation.allDependencies.each {
+                    if (it.group != null && (it.name != null || !"unspecified".equals(it.name)) && it.version != null && !"unspecified".equals(it.version)) {
+                        def dependencyNode = dependenciesNode.appendNode('dependency')
+                        dependencyNode.appendNode('groupId', it.group)
+                        dependencyNode.appendNode('artifactId', it.name)
+                        dependencyNode.appendNode('version', it.version)
+                    }
+                }
+            }
         }
     }
 }
