--- a/.github/workflows/bintray_upload.yml
+++ b/.github/workflows/bintray_upload.yml
@@ -3,7 +3,7 @@ name: Java CI
 on:
   push:
     tags:
-      - '*'
+      - v*
 
 jobs:
   build:
@@ -27,5 +27,5 @@ jobs:
       - name: Upload
         run: ./gradlew bintrayUpload
         env:
-          bintrayUsername: ${{ secrets.bintrayUsername }}
-          bintrayApiKey: ${{ secrets.bintrayApiKey }}
+          bintrayUsername: ${{ secrets.BINTRAY_NAME }}
+          bintrayApiKey: ${{ secrets.BINTRAY_API_KEY }}
