👷 Migrate from jCenter to Maven Central

--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.22.0"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.5.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,6 +24,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
@@ -42,3 +46,5 @@ ext.libProperties.load(file("${rootDir}/lib.properties").newReader())
 ext {
     rxJavaVersion = '2.2.16'
 }
+
+apply plugin: 'io.codearte.nexus-staging' // this should be at the end of the file
