--- a/lib.properties
+++ b/lib.properties
@@ -1,8 +1,6 @@
-VERSION_NAME=1.1.1
+VERSION_NAME=1.2.0
 VERSION_CODE=1
-GROUP=cz.ackee.rxsociallogin
-BINTRAY_REPO=rx-social-login
-BINTRAY_ORGANISATION=ackeecz
+GROUP=io.github.ackeecz
 SITE_URL=https://github.com/AckeeCZ/rx-social-login
 GIT_URL=https://github.com/AckeeCZ/rx-social-login.git
 POM_DEVELOPER_ID=ackee
@@ -10,3 +8,7 @@ POM_DEVELOPER_NAME=Ackee
 POM_DEVELOPER_EMAIL=info@ackee.cz
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_SCM_CONNECTION=scm:git:github.com/AckeeCZ/rx-social-login.git
+POM_SCM_DEVELOPER_CONNECTION=scm:git:ssh://github.com/AckeeCZ/rx-social-login.git
+POM_SCM_URL=https://github.com/AckeeCZ/rx-social-login/tree/main
+SONATYPE_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
